--- a/fj21-agenda/WebContent/WEB-INF/web.xml
+++ b/fj21-agenda/WebContent/WEB-INF/web.xml
@@ -6,10 +6,37 @@
 	<display-name>fj21-agenda</display-name>
 
 	<servlet>
+		<servlet-name>deletarContato</servlet-name>
+		<servlet-class>br.com.caelum.servlet.DeletaContatoServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>deletarContato</servlet-name>
+		<url-pattern>/deletarContato</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>atualizarContato</servlet-name>
+		<servlet-class>br.com.caelum.servlet.AtualizaContatoServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>atualizarContato</servlet-name>
+		<url-pattern>/atualizarContato</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>consultaContato</servlet-name>
+		<servlet-class>br.com.caelum.servlet.ConsultaContatoServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>consultaContato</servlet-name>
+		<url-pattern>/consultaContato</url-pattern>
+	</servlet-mapping>
+
+
+	<servlet>
 		<servlet-name>adicionaContato</servlet-name>
 		<servlet-class>br.com.caelum.servlet.AdicionaContatoServlet</servlet-class>
 	</servlet>
-
 	<servlet-mapping>
 		<servlet-name>adicionaContato</servlet-name>
 		<url-pattern>/adicionaContato</url-pattern>
@@ -20,11 +47,15 @@
 		<servlet-name>primeiraServlet</servlet-name>
 		<servlet-class>br.com.caelum.servlet.OiMundo</servlet-class>
 	</servlet>
-
 	<servlet-mapping>
 		<servlet-name>primeiraServlet</servlet-name>
 		<url-pattern>/oi</url-pattern>
 	</servlet-mapping>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404.html</location>
+	</error-page>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
