--- a/fj21-agenda/WebContent/WEB-INF/web.xml
+++ b/fj21-agenda/WebContent/WEB-INF/web.xml
@@ -56,8 +56,11 @@
 		<error-code>404</error-code>
 		<location>/404.html</location>
 	</error-page>
+	
+	
 
 	<welcome-file-list>
+		<welcome-file>listar-com-jstl.jsp</welcome-file>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
